QXGEdit - Qt XG Editor
----------------------

ChangeLog


0.4.2  2016-11-14  A Fall'16 release.

- Fixed a potential crash on the singleton/unique application
  instance setup.

- MIDI RPN/NRPN running status and RPN NULL reset command
  are now supported (input only).

- Almost complete overhaul on the configure script command
  line options, wrt. installation directories specification,
  eg. --prefix, --bindir, --libdir, --datadir and --mandir.

- Remove extra 'Keywords' entry and fix spelling (patches by
  Jaromír Mikeš, thanks).


0.4.1  2016-09-14  End of Summer'16 release.

- Dropped the --enable-qt5 from configure as found redundant
  given that's the build default anyway (suggestion by Guido
  Scholz, while for Qtractor, thanks).


0.4.0  2016-04-05  Spring'16 release frenzy.

- Prevent x11extras module from use on non-X11/Unix plaforms.

- French (fr) translations update (by Olivier Humbert, thanks).

- Fixed port on MIDI 14-bit controllers input caching.


0.3.0  2015-09-21  Summer'15 release frenzy.

- Single/unique application instance control adapted to Qt5/X11.

- Prefer Qt5 over Qt4 by default with configure script.

- Complete rewrite of Qt4 vs. Qt5 configure builds.

- A new top-level widget window geometry state save and restore
  sub-routine is now in effect.

- Added "Keywords" to desktop file; fix passing debian flags on
  configure (patches by Jaromír Mikeš, thanks).
- Fixed for some strict tests for Qt4 vs. Qt5 configure builds.

- Added application description as freedesktop.org's AppData.


0.2.0  2015-03-04  Fifth public release.

- In a glance, all GUI toolbox pages converted into tabs.

- Introducing a brand new user preference on eye-candy: cf.
  View/Options.../Display/Widget style theme.

- Most graphics now rendered with anti-aliased lines.

- A man page has beed added.

- Allow the build system to include an user specified LDFLAGS.

- Fix port origin on MIDI RPN/NRPN 14-bit controllers input.

