@@ -5,15 +5,9 @@ AC_CONFIG_SRCDIR(src/qxgedit.cpp)
 AC_CONFIG_HEADERS(src/config.h)
 AC_CONFIG_FILES(Makefile qxgedit.spec src/src.pri src/qxgedit.desktop skulpture/skulpture.pri)
 
-# Build date and time.
-AC_CACHE_VAL([ac_cv_build_date],
-   [ac_cv_build_date=$(date +"%b %d %Y %H:%M %z")])
-ac_build_date="$ac_cv_build_date"
-AC_DEFINE_UNQUOTED(CONFIG_BUILD_DATE, ["$ac_build_date"], [Build date and time.])
-
 # Build version string.
 AC_CACHE_VAL([ac_cv_build_version], [
-   ac_cv_build_version=$(git describe --tags --abbrev=6 2>/dev/null)
+   ac_cv_build_version=$(git describe --tags --dirty --abbrev=6 2>/dev/null)
    if test -n "$ac_cv_build_version"; then
       ac_cv_build_version=$(echo $ac_cv_build_version | sed -r 's/^[[^_]]+_//')
       ac_cv_build_version=$(echo $ac_cv_build_version | sed -r 's/-g/git./')
@@ -336,6 +330,9 @@ AC_HEADER_SYS_WAIT
 AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/stat.h unistd.h signal.h)
 
 # Check for X11 unique/single instance.
+if test "x$ac_xunique" = "xyes" -a "x$ac_qt4" = "xno"; then
+   PKG_CHECK_MODULES([QT5X11EXTRAS], [Qt5X11Extras], [ac_xunique="yes"], [ac_xunique="no"])
+fi
 if test "x$ac_xunique" = "xyes"; then
    AC_DEFINE(CONFIG_XUNIQUE, 1, [Define if X11 unique/single instance is enabled.])
    if test "x$ac_qt4" = "xno"; then
@@ -373,7 +370,7 @@ AC_OUTPUT
 # Output summary message
 
 echo
-echo "  $PACKAGE_NAME $ac_build_version  ($ac_build_date)"
+echo "  $PACKAGE_NAME $ac_build_version"
 echo
 echo "  Build target . . . . . . . . . . . . . . . . . . .: $ac_debug"
 echo
