@@ -4,6 +4,12 @@ QXGEdit - Qt XG Editor
 ChangeLog
 
 
+GIT HEAD
+
+- Make builds reproducible byte for byte, by getting rid of
+  the configure build date and time stamps.
+
+
 0.4.2  2016-11-14  A Fall'16 release.
 
 - Fixed a potential crash on the singleton/unique application
